--- a/index.html
+++ b/index.html
@@ -101,78 +101,89 @@
           <h3>Senior Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2025 - <b>Present</b></p>
-          <p>
-            <code
-              >Internal Position:
-              <b>Senior Member of Engineering Staff (L3)</b></code
-            >
-            <br />
-            <br />
-            <b>- ADD LINES HERE</b>
-          </p>
+          <code
+            >Internal Position:
+            <b>Senior Member of Engineering Staff (L3)</b></code
+          >
+
+          <details>
+            <summary>Roles and Responsibilities</summary>
+
+            <ul>
+              <li>Add lines here</li>
+            </ul>
+          </details>
         </aside> -->
 
         <aside>
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2022 - <b>Present</b></p>
-          <p>
-            <code
-              >Internal Position: <b>Member of Engineering Staff (L2)</b></code
-            >
-            <br />
-            <br />
-            - Primary software engineer on an
-            <abbr title="Internal Research and Development">IRAD</abbr> effort
-            to build out an
-            <abbr title="Enterprise of Lockheed Martin Corporation"
-              >enterprise</abbr
-            >
-            offering of APICurio Registry & APICurio Studio
-            <br />
-            - Member of architecture team overseeing the design of new
-            functionality for Oasis
-            <abbr title="United States Navy Baseline">USN BL</abbr> 9.2.3
-            <br />
-            - New Hire Mentor for 1 new employee
-          </p>
+          <code
+            >Internal Position: <b>Member of Engineering Staff (L2)</b></code
+          >
+
+          <details>
+            <summary>Roles and Responsibilities</summary>
+
+            <ul>
+              <li>Software engineer on the Oasis Base development team</li>
+              <li>
+                Primary software engineer on an
+                <abbr title="Internal Research and Development">IRAD</abbr>
+                effort to build out an
+                <abbr title="Lockheed Martin Corporation">enterprise</abbr>
+                offering of APICurio Registry & APICurio Studio
+              </li>
+              <li>
+                Member of architecture team overseeing the design of new
+                functionality for Oasis
+                <abbr title="United States Navy Baseline">USN BL</abbr>
+                9.2.3
+              </li>
+              <li>New Hire Mentor for 1 new employee</li>
+            </ul>
+          </details>
         </aside>
 
         <aside>
           <h3>Paternity Leave</h3>
           <p class="family-medical-leave">Family and Medical Leave</p>
           <p>November 2022 - January 2023</p>
-          <p>
-            Time spent taking care of my fiancé post-partum and bonding with our
-            newborn.
-          </p>
+
+          Time spent taking care of my fiancé post-partum and bonding with our
+          newborn baby.
         </aside>
 
         <aside>
           <h3>Associate Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2020 - April 2022</p>
-          <p>
-            <code
-              >Internal Position:
-              <b>Associate Member of Engineering Staff (L1)</b></code
-            >
-            <br />
-            <br />
-            - Worked on the Oasis Base development team
-            <br />
-            - Worked closely with the
-            <abbr title="Synthetic Combat Operator Trainer; Republic of Korea"
-              >SCOT K2</abbr
-            >
-            development team; traveled to the Republic of Korea
-            <br />
-            - Primary software engineer on an
-            <abbr title="Internal Research and Development">IRAD</abbr> effort
-            to modernize Oasis Base 3rd-party API integration
-            <br />
-            - New Hire Mentor for 3 new employees
-          </p>
+          <code
+            >Internal Position:
+            <b>Associate Member of Engineering Staff (L1)</b></code
+          >
+          <details>
+            <summary>Roles and Responsibilities</summary>
+
+            <ul>
+              <li>Software engineer on the Oasis Base development team</li>
+              <li>
+                Software engineer working with the
+                <abbr
+                  title="Synthetic Combat Operator Trainer; Republic of Korea"
+                  >SCOT K2</abbr
+                >
+                development team; traveled to the Republic of Korea
+              </li>
+              <li>
+                Primary software engineer on an
+                <abbr title="Internal Research and Development">IRAD</abbr>
+                effort to modernize Oasis Base 3rd-party API integration
+              </li>
+              <li>New Hire Mentor for 3 new employees</li>
+            </ul>
+          </details>
         </aside>
       </section>
 
@@ -308,6 +319,7 @@
               >Every day people use the network to connect with people without
               worry of being tracked or their data being collected.</q
             >
+            - geti2p.net
           </p>
         </aside>
       </section>
