--- a/projects/js-drag-and-drop/index.html
+++ b/projects/js-drag-and-drop/index.html
@@ -18,14 +18,16 @@
       Please enable JavaScript in order to view this webpage.
     </noscript>
 
-    <div id="yellow-banner">WORK IN PROGRESS</div>
-
     <main hidden>
       <a href="/projects">Back to Projects List</a>
 
       <h1>JS Drag and Drop</h1>
 
-      <p>Description...</p>
+      <p>
+        The <b>JS Drag and Drop API</b> is designed to allow the users the
+        interact with content on the webpage by "dragging and dropping" the
+        content from one location to another.
+      </p>
     </main>
 
     <script type="module">
@@ -37,6 +39,103 @@
 
       (() => {
         document.getElementsByTagName("main")[0].hidden = false;
+
+        class App extends StyledComponent {
+          init() {}
+
+          allowDrop(e) {
+            e.preventDefault();
+          }
+
+          drag(e) {
+            e.dataTransfer.setData("text", e.target.id);
+          }
+
+          drop(e) {
+            e.preventDefault();
+            var data = e.dataTransfer.getData("text");
+            e.target.appendChild(document.getElementById(data));
+          }
+
+          styles() {
+            return css`
+              .droppable-div {
+                float: left;
+                width: 200px;
+                height: 200px;
+                margin: 10px;
+                padding: 10px;
+                border: 1px solid black;
+              }
+            `;
+          }
+
+          compose() {
+            return vdom`
+                    <div>
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      >
+                        <img
+                          src="https://picsum.photos/200/200"
+                          id="drag1"
+                          width="200"
+                          height="200"
+                          draggable="true"
+                          ondragstart="${(e) => this.drag(e)}"
+                        />
+                      </div>
+
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      ></div>
+
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      ></div>
+
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      ></div>
+
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      ></div>
+
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      ></div>
+
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      ></div>
+
+                      <div
+                        class="droppable-div"
+                        ondrop="${(e) => this.drop(e)}"
+                        ondragover="${(e) => this.allowDrop(e)}"
+                      ></div>
+                    </div>
+                  `;
+          }
+        }
+
+        const app = new App();
+        document.getElementsByTagName("main")[0].appendChild(app.node);
       })();
     </script>
   </body>
