Added new certification

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- <aside>
           <h3>Senior Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
-          <p>May 2025 - <b>Present</b></p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
           <code
             >Internal Position:
             <b>Senior Member of Engineering Staff (L3)</b></code
@@ -110,7 +110,17 @@
             <summary>Roles and Responsibilities</summary>
 
             <ul>
-              <li>Add lines here</li>
+              <li>
+                Product owner and software engineer for the Oasis Base
+                development team
+              </li>
+              <li>
+                Product owner and software engineer on an
+                <abbr title="Internal Research and Development">IRAD</abbr>
+                effort to build out an
+                <abbr title="Lockheed Martin Corporation">enterprise</abbr>
+                offering of APICurio Registry & APICurio Studio
+              </li>
             </ul>
           </details>
         </aside> -->
@@ -383,6 +393,17 @@
           technical leaders on proposals and programs, providing incentive for
           technical professionals to grow their skills and expertise in leading
           technical teams.
+          <br />
+          <em class="certification-date"
+            ><b>INSERT DATE OBTAINED</b> - Forever</em
+          >
+        </p> -->
+
+        <!-- <p>
+          <b class="certification-title">Lockheed Martin: Lead 4 Success</b>
+          <br />
+          A series of training seminars (16 total hours) for up-and-coming lead
+          engineers at Lockheed Martin.
           <br />
           <em class="certification-date"
             ><b>INSERT DATE OBTAINED</b> - Forever</em
